fix(WB-6449): fix text alignment issues

--- a/src/ordering/containers/order-status/containers/ThankYou/components/MemberCard/MemberCard.scss
+++ b/src/ordering/containers/order-status/containers/ThankYou/components/MemberCard/MemberCard.scss
@@ -34,6 +34,10 @@
     color: $basic-text-basic;
     background-color: $status-yellow-1;
 
+    &__cashback-title {
+      flex-grow: 1;
+    }
+
     &__cashback-icon {
       width: 24px;
       height: 24px;
